# AgenticAI-Stock-Analysis

./: .gitignore  README.md  pyproject.toml
src/balancesheet_agent/: balance_sheet_agent.py  balance_sheet_executor.py  main.py
src/cashflow_agent/: cash_flow_agent.py  cashflow_statement_executor.py  main.py
src/financials_agent/: fmp_data.py
src/host/: main.py  remote_agent_connection.py  routing_agent.py
src/incomestatement_agent/: income_statement_agent.py  income_statement_executor.py  main.py
